# lipe

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  THANKS  config.h  configure.ac  reconf
doc/: Example-dump.1  Example-dump.2  Makefile.am  dev-hda  dev-hdc  sim-dev-hda  sim-dev-hdc
src/: Makefile.am  common.c  common.h  gpl.h  i386types.h  lipe.8  lipe.c  lipe.desktop  lipe.h  lipecurse.c  lipecurse.h  lipegtk.c  lipegtk.h  token.c  token.h
